module_4/homework-20240623/test/test-deployment.yaml
# test-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment
  namespace: yourhostel-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
