module_4/homework-20240623/test/test-service.yaml
# test-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: test-service
  namespace: yourhostel-namespace
spec:
  selector:
    app: test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
